Use foreign memory.